Done: Text decode using Win env tesseract

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@ body {
   background-color: white;
 }
 
+body .flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 body h1 {
   margin: 0;
   padding: 0;
